test-cases/final-dump/resource_error.wybe
pub def missing_resource_marker use !io {
    println("shouldn't work: no ! before println call")
}
